# searchEngine

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp  SearchServer.h  main.cpp
resources/: file002.txt  file005.txt  file006.txt  file007.txt  file009.txt  file010.txt  file011.txt  file014.txt
test/: CMakeLists.txt
test/testSearch_engine/: CMakeLists.txt  test.cpp  test1.cpp
